added new photo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="hero-media">
             <div class="photo-frame">
               <img
-                src="C:\Users\Acer\OneDrive\Pictures\mustang\chhanu.jpg"
+                src="images/chhanu.jpg"
                 alt="Portrait of Chhanu Gurung"
               />
               
