--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="#CV">CV</a></li>
         </ul>
       </nav>
       <a class="btn ghost" href="#contact">Let’s Talk</a>
