--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
                 </p>
               </div>
           </div>
-          <form class="contact-form">
+          <form class="contact-form"
+          action="https://formspree.io/f/mnneykad"
+          method="post">
             <label>
               Name
               <input type="text" name="name" placeholder="Your name" required />
@@ -345,6 +347,32 @@
             </label>
             <button type="submit" class="btn primary">Send Message</button>
           </form>
+          <p id="form-status"></p>
+
+<script>
+  const form = document.querySelector(".contact-form");
+  const status = document.getElementById("form-status");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const data = new FormData(form);
+
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: data,
+      headers: { Accept: "application/json" },
+    });
+
+    if (response.ok) {
+      status.innerHTML = "✅ Message sent successfully!";
+      form.reset();
+    } else {
+      status.innerHTML = "❌ Oops! Something went wrong.";
+    }
+  });
+</script>
+
           </div>
         </div>
       </section>
